--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,32 @@
-body {
-    vertical-align: center;
+html, body {
+    height: 100%;
 }
 
-section {
+.main {
+    width: 100%;
+}
+
+.container {
     margin: auto;
-    justify-content: center;
     width: 500px;
     height: 500px;
-    background-color: red;
+    background-color: rgb(59, 174, 202);
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .grid {
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
+    width: 31.25px;
+    height: 31.25px;
 }
 
-div {
-    background-color: blue;
+.red {
+    background-color: red;
+}
+
+button {
+    background-color: rgb(59, 174, 202);
+    border: 1px solid rgb(59, 174, 202);
+    border-radius: 3px;
+    padding: 5px 10px;
 }
