--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 html, body {
     height: 100%;
+    text-align: center;
 }
 
 .main {
+    text-align: center;
     width: 100%;
+    height: 100%;
 }
 
 .container {
@@ -11,13 +14,10 @@ html, body {
     width: 500px;
     height: 500px;
     background-color: rgb(59, 174, 202);
-    display: flex;
-    flex-wrap: wrap;
-}
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
 
-.grid {
-    width: 31.25px;
-    height: 31.25px;
 }
 
 .red {
