--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,78 @@
-html, body {
-    height: 100%;
+html {
+    font-family: 'Muli', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    line-height: 1.6;
+}
+
+body {
     text-align: center;
+    background-color: #2c2f33;
+    margin: 0;
+    min-height: 100vh;
+}
+h1 {
+    color: #efefef;
+    font-size: 3em;
 }
 
 .main {
     text-align: center;
     width: 100%;
-    height: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
-    margin: auto;
+    margin: 0 auto;
     width: 500px;
     height: 500px;
-    background-color: rgb(59, 174, 202);
+    background-color: #666666;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
-
+    border: 30px solid rgb(226, 32, 32);
+    border-radius: 30px;
 }
 
-.red {
-    background-color: red;
+.clean {
+    background-color: #efefef;
 }
 
 button {
-    background-color: rgb(59, 174, 202);
-    border: 1px solid rgb(59, 174, 202);
+    font-size: 1em;
+    background-color: #99aab5;
+    border: 1px solid #99aab5;
     border-radius: 3px;
-    padding: 5px 10px;
+    padding: 10px 15px;
+    margin: 2em 8.5em 0 8.5em;
+    overflow: hidden;
 }
+
+button:hover {
+    cursor: pointer;
+}
+
+footer {
+    margin: 0 1em;
+    text-align: left;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+}
+
+footer h2 {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+img {
+    max-height: 30px;
+    margin: 0;
+}
+
